# smith_waterman

./: .travis.yml  Cargo.toml  README.md  index.html  params.json
benches/: lib.rs
docs/: search-index.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/iter/: trait.FromIterator.js
docs/implementors/core/ops/: trait.Index.js  trait.Neg.js
docs/nalgebra/: fn.append_rotation_wrt_center.html  fn.approx_eq.html  fn.approx_eq_eps.html  fn.canonical_basis_element.html  fn.center.html  fn.det.html  fn.dim.html  fn.dist.html  fn.identity.html  fn.inv_transform.html  fn.is_zero.html  fn.mean.html  fn.new_identity.html  fn.normalize.html  fn.outer.html  fn.partial_clamp.html  fn.partial_ge.html  fn.partial_min.html  fn.translate.html  fn.transpose.html  fn.zero.html  index.html  struct.DVec.html  struct.DVec1.html  struct.Mat1.html  struct.Mat2.html  struct.Mat5.html  struct.Mat6.html  struct.Persp3.html  struct.PerspMat3.html  struct.Pnt5.html  struct.Pnt6.html  struct.Rot3.html  struct.Vec0.html  struct.Vec6.html  trait.BaseNum.html  trait.Col.html  trait.ColSlice.html  trait.Dim.html  trait.EigenQR.html  (+15 more)
docs/rand/: struct.AsciiGenerator.html  struct.Generator.html
docs/smith_waterman/: enum.GraphMovements.html  index.html  struct.SmithWaterman.html
docs/smith_waterson/: enum.GraphMovements.html
docs/src/nalgebra/structs/: dmat.rs.html  pnt.rs.html  vec.rs.html
docs/src/num/: bigint.rs.html
docs/src/rand/: read.rs.html
docs/src/rand/distributions/: mod.rs.html  range.rs.html
docs/src/rustc_serialize/: base64.rs.html  collection_impls.rs.html  json.rs.html  lib.rs.html  serialize.rs.html
docs/src/smith_waterman/: lib.rs.html
docs/src/smith_waterson/: lib.rs.html
src/: lib.rs
tests/: lib.rs
