[package]
name = "smith_waterson"
version = "0.0.1"
authors = ["Stephen Becker IV <github@deathbyescalator.com>"]
documentation = "http://sbeckeriv.github.io/smith_waterson_rs/docs/smith_waterson/struct.SmithWaterman.html"
homepage = "http://sbeckeriv.github.io/smith_waterson_rs"
repository = "https://github.com/sbeckeriv/smith_waterson_rs"
readme = "./README.md"
keywords = ["waterson", "smith", "smith-waterson"]

[dependencies]
nalgebra = "0.2.17"

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`

