[package]
name = "smith_waterman"
version = "0.1.0"
authors = ["Stephen Becker IV <github@deathbyescalator.com>"]
description = "The Smith–Waterman algorithm performs local sequence alignment."
documentation = "https://sbeckeriv.github.io/smith_waterman/target/doc/smith_waterman/struct.SmithWaterman.html"
homepage = "http://sbeckeriv.github.io/smith_waterman"
repository = "https://github.com/sbeckeriv/smith_waterman"
readme = "./README.md"
keywords = ["waterman", "smith", "smith-waterman", "sequence", "alignment"]
license-file = "./LICENSE-MIT"

[dependencies]
nalgebra = "0.2.17"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`

